# gentoo

./: NOTES  build-and-upload.py  build-and-upload.sh  build.sh  gen-dist.sh  metabuild.sh  settings.yml.default  startprefix  user-data.sample
etc/: DIR_COLORS  ca-certificates.conf  csh.env  gentoo-release  host.conf  ld.so.conf  locale.gen  make.globals  man.conf  nanorc  profile  profile.env  rsyncd.conf  wgetrc
etc/bash/: bashrc
etc/conf.d/: pydoc-2.7
etc/cron.daily/: makewhatis
etc/env.d/: 00basic  00glibc  04gcc-x86_64-pc-linux-gnu  05binutils  50ncurses  98ca-certificates  99basic
etc/env.d/binutils/: config-x86_64-pc-linux-gnu  x86_64-pc-linux-gnu-2.24
etc/env.d/gcc/: .NATIVE  config-x86_64-pc-linux-gnu  x86_64-pc-linux-gnu-4.7.3
etc/init.d/: functions.sh  kmod-static-nodes  pydoc-2.7  rsyncd  sshd  zfs
etc/ld.so.conf.d/: 05binutils.conf
etc/portage/: make.conf  make.profile  package.accept_keywords  package.mask
etc/portage/profile/: package.provided
etc/prelink.conf.d/: portage.conf
etc/profile.d/: 00-gcc-paths.sh
etc/runlevels/sysinit/: kmod-static-nodes
etc/sandbox.d/: 10openssl
etc/sgml/: catalog  xml-docbook-4.1.2.cat
etc/ssh/: sshd_config
etc/ssl/certs/: A-Trust-nQual-03.pem  ACCVRAIZ1.pem  ACEDICOM_Root.pem  AC_Raíz_Certicámara_S.A..pem  Actalis_Authentication_Root_CA.pem  AddTrust_External_Root.pem  AddTrust_Low-Value_Services_Root.pem  AddTrust_Public_Services_Root.pem  AddTrust_Qualified_Certificates_Root.pem  AffirmTrust_Commercial.pem  AffirmTrust_Networking.pem  AffirmTrust_Premium.pem  AffirmTrust_Premium_ECC.pem  America_Online_Root_Certification_Authority_1.pem  America_Online_Root_Certification_Authority_2.pem  ApplicationCA_-_Japanese_Government.pem  Atos_TrustedRoot_2011.pem  Autoridad_de_Certificacion_Firmaprofesional_CIF_A62634068.pem  Baltimore_CyberTrust_Root.pem  Buypass_Class_2_CA_1.pem  Buypass_Class_2_Root_CA.pem  Buypass_Class_3_CA_1.pem  Buypass_Class_3_Root_CA.pem  CA_Disig.pem  CA_Disig_Root_R1.pem  CA_Disig_Root_R2.pem  CNNIC_ROOT.pem  COMODO_Certification_Authority.pem  COMODO_ECC_Certification_Authority.pem  Camerfirma_Chambers_of_Commerce_Root.pem  Camerfirma_Global_Chambersign_Root.pem  Certigna.pem  Certinomis_-_Autorité_Racine.pem  Certplus_Class_2_Primary_CA.pem  Certum_Root_CA.pem  Certum_Trusted_Network_CA.pem  Chambers_of_Commerce_Root_-_2008.pem  China_Internet_Network_Information_Center_EV_Certificates_Root.pem  ComSign_CA.pem  ComSign_Secured_CA.pem  (+134 more)
etc/ssl/misc/: CA.pl
etc/terminfo/v/: vt220
etc/xinetd.d/: rsyncd
etc/xml/: catalog  docbook
etc/zfs/zed.d/: all-syslog.sh  checksum-email.sh  checksum-spare.sh  data-email.sh  io-email.sh  io-spare.sh  resilver.finish-email.sh  scrub.finish-email.sh
tmp/usr/lib/: libz.so.1.2.8
usr/: tmp
usr/include/: ansidecl.h  bfd.h  bfdlink.h  bzlib.h  curses.h  db.h  db_185.h  demangle.h  dis-asm.h  dyn-string.h  fibheap.h  gettext-po.h  gmp.h  hashtab.h  libiberty.h  mpfr.h  objalloc.h  pcre_stringpiece.h  plugin-api.h  splay-tree.h  symcat.h  tcpd.h  zconf.h
usr/include/asm-generic/: fcntl.h
usr/include/blkid/: blkid.h
usr/include/db5.2/: db.h  db_cxx.h
usr/include/drm/: radeon_drm.h
usr/include/event2/: event-config.h
usr/lib/: libasprintf.so.0.0.0  libblkid.so.1.1.0  libbz2.so.1.0.6  libcrypto.so.1.0.0  libdb-5.2.la  libdb_cxx-5.2.la  libdb_sql-5.2.la  libdb_stl-5.2.la  libeinfo.la  libeinfo.so.1.0.0  libevent-2.0.so.5.1.9  libevent_core-2.0.so.5.1.9  libevent_extra-2.0.so.5.1.9  libevent_openssl-2.0.so.5.1.9  libevent_pthreads-2.0.so.5.1.9  libexpat.so.1.6.0  libexpatu.so.1.6.0  libexpatw.so.1.6.0  libffi.so.6.0.2  libform.so.5.9  libformw.so.5.9  libgdbm.so.4.0.0  libgdbm_compat.so.4.0.0  libgettextpo.so.0.5.2  libgmp.so.10.1.3  libgmpxx.so.4.3.3  libhistory.la  libhistory.so.6.0.2  libkmod.so.2.2.8  libltdl.la  libltdl.so.7.3.0  liblz4.so.1.3.0  liblzma.so.5  liblzma.so.5.0.6  libmagic.so.1.0.0  libmenu.so.5.9  libmenuw.so.5.9  libmount.so.1.1.0  libmpc.so.3.0.0  libmpfr.so.4.1.2  (+28 more)
usr/lib64/: locale
usr/libexec/: zfs-init.sh
usr/sbin/: addpart  agetty  archive-conf  arp  backup-tar  backup.sh  blkdiscard  blkid  blockdev  cfdisk  chcpu  ctrlaltdel  delpart  dispatch-conf  dump-remind  emaint  env-update  etc-update  fdisk  findfs  fix_libtool_files.sh  fixpackages  fsck  fsck.cramfs  fsck.minix  fsck.zfs  fsfreeze  fstrim  hwclock  iconvconfig  installkernel  ipmaddr  iptunnel  ldattach  ldconfig  locale-gen  losetup  makewhatis  mii-tool  mkfs  (+53 more)
var/tmp/portage/sys-apps/baselayout-prefix-2.2-r3/work/einfo-1.0.6/: Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.ac
var/tmp/portage/sys-apps/baselayout-prefix-2.2-r3/work/einfo-1.0.6/man/: Makefile.am  Makefile.in
var/tmp/portage/sys-apps/baselayout-prefix-2.2-r3/work/einfo-1.0.6/pkgconfig/: Makefile.am  Makefile.in  einfo.pc.in
var/tmp/portage/sys-apps/baselayout-prefix-2.2-r3/work/einfo-1.0.6/sh/: Makefile.am  Makefile.in  functions.sh.in
var/tmp/portage/sys-apps/baselayout-prefix-2.2-r3/work/einfo-1.0.6/src/: Makefile.am  Makefile.in
var/tmp/portage/sys-apps/baselayout-prefix-2.2-r3/work/einfo-1.0.6/src/includes/: helpers.h  hidden-visibility.h
var/tmp/portage/sys-apps/baselayout-prefix-2.2-r3/work/einfo-1.0.6/src/libeinfo/: Makefile.am  Makefile.in  einfo.h  libeinfo.c
var/tmp/portage/sys-apps/baselayout-prefix-2.2-r3/work/einfo-1.0.6/src/rc/: Makefile.am  Makefile.in  main.c  rc-applets.c
var/tmp/portage/sys-devel/binutils-config-3-r03.1/work/toolchain-prefix-wrapper-0.3.1723/: Makefile.am  Makefile.in  config.h.in  configure  configure.ac
var/tmp/portage/sys-devel/binutils-config-3-r03.1/work/toolchain-prefix-wrapper-0.3.1723/ld/: Makefile.am  Makefile.in  aixplugin.c  aixplugin.h  create-ldwrapper.in  darwinplugin.c  darwinplugin.h  gnuplugin.c  gnuplugin.h  hpuxplugin.c  hpuxplugin.h  ldplugin.h  ldwrapper.c  solarisplugin.c  solarisplugin.h
var/tmp/portage/sys-devel/binutils-config-3-r03.1/work/toolchain-prefix-wrapper-0.3.1723/utils/: Makefile.am  Makefile.in  stringutil.c  stringutil.h  textfile.c  textfile.h
(+44907 files in other folders)
