# Copyright 2007-2012 Gentoo Foundation
# Distributed under the terms of the GNU General Public License v2
# Author: Michael Haubenwallner <haubi@gentoo.org>

noinst_LIBRARIES = libtoolchain-prefix-wrapper_utils.a
libtoolchain_prefix_wrapper_utils_a_SOURCES = stringutil.h stringutil.c textfile.h textfile.c

MAINTAINERCLEANFILES = Makefile.in
